--- a/src/input.css
+++ b/src/input.css
@@ -16,13 +16,13 @@
         @apply hidden  lg:block;
     }
     .header__nav ul {
-        @apply lg:flex  lg:gap-10 lg:text-center
+        @apply lg:flex  lg:gap-10 lg:text-center;
     }
     .header__nav ul li{
         @apply lg:hover:scale-[1.05] lg:transition-all;
     }
     .header__nav ul li a{
-        @apply text-lg lg:text-gray-500 lg:font-semibold
+        @apply text-lg lg:text-gray-500 lg:font-semibold;
     }
   
     .toggle__menu{
@@ -71,13 +71,13 @@
         @apply text-[2rem] font-bold text-center lg:text-[80px] lg:mt-5;
     }
     .banner__content span{
-        @apply text-cycy
+        @apply text-cycy;
     }
     .banner__content p{
-        @apply text-[18px] text-center mb-16 w-[25rem] mx-auto lg:text-[32px] lg:w-[45rem]
+        @apply text-[18px] text-center mb-16 w-[25rem] mx-auto lg:text-[32px] lg:w-[45rem];
     }
     .banner__content img{
-        @apply w-[25rem] mx-auto rounded-3xl hover:scale-[1.05] transition-all shadow-xl lg:w-[65rem]
+        @apply w-[25rem] mx-auto rounded-3xl hover:scale-[1.05] transition-all shadow-xl lg:w-[65rem];
     }
 }
 
@@ -86,39 +86,164 @@
         @apply pt-16  ; 
     }
     .train__content h2{
-        @apply text-[38px] font-bold w-[21rem] mx-auto text-center pb-5 lg:text-[60px] lg:w-[30rem]
+        @apply text-[38px] font-bold w-[21rem] mx-auto text-center pb-5 lg:text-[60px] lg:w-[30rem];
     }
 
     .train__content a{
         @apply flex justify-center px-[.4rem] py-[.4rem] bg-cycy w-[8rem]  rounded-full text-center text-light text-[18px] font-semibold hover:scale-[1.05] transition-all items-center mx-auto lg:text-[30px] lg:px-[.6rem] lg:py-[.6rem]
-        lg:w-[15rem] 
+        lg:w-[15rem] ;
     }
 }
 @layer components{
-    .footer{
-        @apply pt-7
+    .footer__links{
+        @apply my-[3rem];
     }
-    
-    .footer__items__links h5{
-        @apply text-[1.6rem] mb-3
+    .footer__wrapper{
+        @apply lg:flex lg:flex-row-reverse lg:items-center lg:justify-evenly;
     }
-    .footer__items__links h5 a{
-       @apply flex items-center justify-between
+    .footer__links{
+        @apply lg:grid lg:grid-cols-5 lg:gap-2;
     }
-    
-    .footer__items__links ul{
-        @apply max-h-0 overflow-hidden
+    .footer__links__item:not(:first-child){
+        @apply my-[3rem];
     }
-   .footer__items__links ul.open{
-    @apply max-h-[20rem]
-   }
-   .footer__items__links ul li{
-    @apply mb-3
-   }
-    .footer ul li a{
-        @apply text-[1.2rem] text-gray-500
+    .footer__links__item:not(:last-child){
+        @apply my-[3rem];
     }
-    .footer__items__links ul li a{
-        @apply hover:text-black
+
+    .footer__links__item h4{
+        @apply flex items-center justify-between;
+    }
+    .footer__links__item h4 span{
+        @apply font-bold;
+    }
+    .footer__links__item h4 i{
+        @apply transition-[.5s] ease-in lg:hidden;
+    }
+
+    .footer__links__item h4 i.open{
+        @apply rotate-[180deg] ease-in transition-[.5s];
+    }
+
+    .footer__links__item ul{
+        @apply my-[2rem] max-h-0 overflow-hidden transition-[.5s] ease-in lg:overflow-visible;
+    }
+    .footer__links__item ul.open{
+        @apply max-h-[25rem] transition-[.5s] ease-in;
+    }
+    .footer__links__item ul li{
+        @apply py-[1rem] px-[.5rem] text-grey hover:scale-[1.02] transition-[.5s] ease-linear lg:px-0;
+    }
+    .footer__links__item ul li a{
+        @apply text-dark;
+    }
+    .footer__icons ul{
+        @apply flex items-center gap-[1.5rem] lg:my-[3rem];
+    }
+    .footer__icons ul li{
+        @apply hover:scale-[1.1] transition-[.5s] ease-in;
+    }
+    .footer__icons ul li a{
+        @apply px-[.75rem] py-[.7rem] bg-cycy rounded-full; 
+    }
+    .footer__icons ul li a i{
+        @apply text-light;
+    }
+    .footer__details img{
+        @apply mx-auto mt-[4rem] lg:mx-0 lg:mt-[6rem];
+    }
+    .footer__details p{
+        @apply text-center my-[1rem] lg:text-left;
     }
 }
+
+@layer components{
+    .link__drop{
+        @apply lg:w-[35rem] lg:mx-auto
+    }
+    .link__drop__items h4{
+        @apply text-[17px] font-semibold pt-5 items-center
+    }
+    .link__drop__items h4 i{
+        @apply float-right transition-[.5s] ease-in
+    }
+    .link__drop__items h4 i.open{
+        @apply rotate-[180deg] ease-in transition-[.5s];
+    }
+    .link__drop__items ul{
+        @apply max-h-0 overflow-hidden pt-4 
+    }
+    .link__drop__items ul li i{
+        @apply text-center px-[.3rem] py-[.5rem] bg-cycy w-[2rem]  rounded-full text-light;
+    }
+    .link__drop__items ul li{
+        @apply mt-2 pt-5 items-center
+    }
+    .link__drop__items ul li a{
+        @apply underline
+    }
+    .link__drop__items ul.open{
+        @apply  max-h-[50rem];
+    }
+
+    .link__drop__items p{
+        @apply text-[16px] leading-8 mb-4 mt-5
+    }
+    
+    .link__drop__items p span{
+        @apply font-semibold 
+    }
+    .link__drop__items p a{
+        @apply underline 
+    }
+    .link__drops h4{
+        @apply items-center justify-center 
+    }
+    .link__drops h4 span i{
+        @apply  text-orange-600 float-left justify-center items-center
+    }
+    .link__drops h4 a{
+        @apply text-[17px] font-semibold 
+    }
+    .link__drops i{
+        @apply float-right
+    }
+
+    
+    .faq .container{
+        @apply max-w-[50rem];
+    }
+    .faq__wrapper{
+        @apply lg:grid lg:grid-cols-[1.5fr,2.5fr] items-start;
+    }
+    .faq__tab{
+        @apply hidden lg:block ;
+    }
+    .faq__question{
+        @apply py-[2rem] border-b-[1px] ;
+    }
+    
+    .faq__question h4{
+        @apply flex items-center justify-between;
+    }
+    .faq__question h4 i{
+        @apply transition ease-in-out duration-[.5s];
+    }
+    .faq__question h4 i.open{
+        @apply transform rotate-180;
+    }
+    .faq__tab__content__answer{
+        @apply max-h-[0rem] overflow-hidden transition-all;
+    }
+    .faq__tab__content__answer.open{
+        @apply max-h-[50rem] transition-all;
+    }
+    .faq__nav li{
+        @apply p-[1rem] max-w-[13rem];
+    }
+    .faq__nav li.active{
+        @apply bg-cycy rounded-xl;
+    }
+}
+
+
